--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.17.2",
     "redis": "^5.10.0",
     "reflect-metadata": "^0.2.2",
+    "svg-captcha": "^1.4.0",
     "swagger-jsdoc": "^6.2.8",
     "typeorm": "^0.3.28",
     "winston": "^3.19.0",
@@ -42,6 +43,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/i18n": "^0.13.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.9",
     "@types/nodemailer": "^7.0.5",
     "@types/swagger-jsdoc": "^6.0.4",
