--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.2.1",
+    "express-slow-down": "^3.0.1",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
-    "hpp": "^0.2.3",
     "i18n": "^0.15.3",
     "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
+    "morgan": "^1.10.1",
     "nodemailer": "^7.0.12",
     "pg": "^8.17.2",
     "redis": "^5.10.0",
@@ -42,12 +45,15 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/hpp": "^0.2.7",
     "@types/i18n": "^0.13.12",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.9",
     "@types/nodemailer": "^7.0.5",
     "@types/swagger-jsdoc": "^6.0.4",
     "eslint": "^9.39.2",
+    "hpp": "^0.2.3",
     "jest": "^30.2.0",
     "prettier": "^3.8.0",
     "ts-jest": "^29.4.6",
